--- a/008-alist/docker-compose.yml
+++ b/008-alist/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
       - "traefik.enable=true"
       - "traefik.docker.network=traefik"
-      - "traefik.http.routers.alist.entrypoints=internal"
+      - "traefik.http.routers.alist.entrypoints=${ENTRYPOINT}"
       - "traefik.http.routers.alist.rule=Host(`${HOSTNAME}`)"
       - "traefik.http.services.alist.loadbalancer.server.scheme=http"
       - "traefik.http.services.alist.loadbalancer.server.port=5244"
