iCloudPD: add some template field

--- a/010-iCloudPD/.env.template
+++ b/010-iCloudPD/.env.template
@@ -4,10 +4,10 @@ user_id=
 group=
 group_id=
 TZ=
-synchronisation_interval=
-authentication_type=
-folder_structure=
-auto_delete=
-icloud_china=
-notification_type=
+synchronisation_interval=86400
+authentication_type=2FA
+folder_structure="{:%Y/%m}"
+auto_delete="True"
+icloud_china="True"
+notification_type=Webhook
 LOCAL_PATH=
