--- a/012-vaultwarden/docker-compose.yml
+++ b/012-vaultwarden/docker-compose.yml
@@ -9,8 +9,12 @@ services:
     networks:
       - cloudflare
     environment:
-      WEBSOCKET_ENABLED: "true"  # Enable WebSocket notifications.
       ROCKET_PORT: 8080
+      SIGNUPS_ALLOWED: "false"
+      WEB_VAULT_ENABLED: "false"
+      INVITATIONS_ALLOWED: "false"
+      SHOW_PASSWORD_HINT: "false"
+      DOMAIN: ${DOCKER_DOMAIN}
       TZ: Asia/Shanghai
     volumes:
       - ./data:/data
