PostgreSQL: remap port

--- a/015-postgreSQL/docker-compose.yml
+++ b/015-postgreSQL/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - traefik
     volumes:
       - ${DOCKER_DATA_PATH}:/var/lib/postgresql/data
+    ports:
+      - ${DOCKER_PORT}:5432
     environment:
       POSTGRES_USER:
       POSTGRES_PASSWORD:
